--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,7 +92,7 @@ jobs:
           #   The test command
           test-command: make ci-functional-test
       
-      # code coverage
+      # Code coverage
       - run:
           name: Upload Code Coverage Report
           command: |
