--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,10 @@ jobs:
       - run:
           name: UnitTests
           command: make ci-unit-test
+        
+      - run:
+          name: Debug - Check CI test result directory
+          command: ls -al ./ci/unit-test/build/reports
 
       # code coverage
       - run:
