--- a/code/build.gradle
+++ b/code/build.gradle
@@ -22,6 +22,9 @@ ext {
     targetCompatibility = JavaVersion.VERSION_1_7
 
     // dependencies
+    junitVersion = "1.1.2"
+    mockitoCoreVersion = "2.28.2"
+    buildToolsVersion = "29.0.3"
     testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     jacocoVersion = "0.8.5"
 }
