--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -25,7 +25,7 @@ spotless {
 }
 
 android {
-    compileSdk rootProject.ext.compileSdkVersion
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
