--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -240,7 +240,7 @@ dependencies {
     // Adobe Mobile SDK Core
     implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
 
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation "org.mockito:mockito-core:2.28.2"
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.0'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
