Update version to 1.0.0

--- a/code/gradle.properties
+++ b/code/gradle.properties
@@ -18,7 +18,7 @@ android.nonTransitiveRClass=true
 moduleProjectName=edgebridge
 moduleName=edgebridge
 moduleAARName=edgebridge-phone-release.aar
-moduleVersion=1.0.0-beta
+moduleVersion=1.0.0
 
 mavenRepoName=AdobeMobileEdgeBridgeSdk
 mavenRepoDescription=Adobe Experience Platform Edge Bridge extension for the Adobe Experience Platform Mobile SDK
