--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -30,7 +30,6 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
 
         testInstrumentationRunner rootProject.ext.testInstrumentationRunner
         consumerProguardFiles "consumer-rules.pro"
@@ -46,7 +45,6 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            debuggable true
         }
 
         release {
@@ -63,6 +61,7 @@ android {
         sourceCompatibility rootProject.ext.sourceCompatibility
         targetCompatibility rootProject.ext.targetCompatibility
     }
+    namespace 'com.adobe.marketing.mobile.edge.bridge'
 }
 
 android.libraryVariants.all { variant ->
