--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -77,6 +77,7 @@ android.libraryVariants.all { variant ->
         exclude "**/R.java"
         options {
             links "https://developer.android.com/reference"
+            linksOffline "https://developer.android.com/reference", "file:///${android.sdkDirectory}/docs/reference"
         }
     }
 }
@@ -210,15 +211,15 @@ dependencies {
     // Adobe Mobile SDK Core
     implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
 
-    testImplementation 'androidx.test.ext:junit:1.1.3'
-    testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
+    testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoCoreVersion}"
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.0'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
 
     // Adobe Mobile dependencies for testing
-    androidTestImplementation "com.adobe.marketing.mobile:edge:1.3.2"
+    androidTestImplementation "com.adobe.marketing.mobile:edge:1.+"
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.6.1'
+    androidTestImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
 }
