--- a/code/build.gradle
+++ b/code/build.gradle
@@ -45,6 +45,8 @@ ext {
     targetCompatibility = JavaVersion.VERSION_1_8
 
     // dependencies
+    junitVersion = "1.1.3"
+    mockitoCoreVersion = "2.23.0"
     testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     jacocoVersion = "0.8.6"
 }
