--- a/code/build.gradle
+++ b/code/build.gradle
@@ -1,4 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    // Android Gradle Plugin version
+    id 'com.android.application' version '7.3.1' apply false
+    id 'com.android.library' version '7.3.1' apply false
+    id 'com.diffplug.gradle.spotless' version '6.11.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+}
+
 ext {
     // android config
     minSdkVersion = 19
