--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation project(':edgebridge')
 
-    implementation 'com.adobe.marketing.mobile:core:1+'
+//    implementation 'com.adobe.marketing.mobile:core:1+'
+    implementation 'com.github.adobe.aepsdk-core-android:core:v2.0.0-alpha.3'
     implementation 'com.adobe.marketing.mobile:edge:1+'
     implementation 'com.adobe.marketing.mobile:assurance:1+'
 }
