Core 2.0 dependencies upgrade: Gradle, AGP, build files (#22)
* Update gitignore for jacoco.exec files

* Apply updates from AGP upgrade assistant
Manual upgrade to gradle 7.5

* Update test app AndroidManifest AssuranceActivity node

* Update edgebridge build.gradle:
Remove aar section from publishing
Move android namespace
Add buildTypes debug debuggable value

* Update root gradle target and compile sdk versions to 33
update jacoco version from 0.8.5 -> 0.8.6

* Update app/build.gradle
Move namespace to top of android
refactor compileSdkVersion to derive from root

* Update javadoc task with linksOffline option
update testImplementation junit and mockito core to derive from root
update androidTestImplementation edge to be 1.+ and junit to derive from root

* Update root build.gradle with junit and mockitoCore versions

* Move code/build.gradle items to settings.gradle
Update code/app/build.gradle to use versions derived from root

* remove version suffix from android blocks

* try removing offline files in javadoc task?

* Update unit test make job with debug flag

* test updated exec file location based on local testing path

* Add local.properties to gitignore
Remove jacoco.exec from code/edgebridge

* Remove debug and commented out test lines from makefile

* Update path for exec file in jacoco unit test generation task

* Remove linksOffline from javadoc task options

* Refactor gradle settings to set plugin at code/build.gradle
Remove comments

* Update version from 7.3.1 to 7.3.0
Update javadoc task to afterEvaluate

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.adobe.marketing.mobile.edge.bridge.testapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -30,7 +29,15 @@
                     android:host="main" />
             </intent-filter>
         </activity>
-        <activity android:name=".AssuranceActivity"/>
+        <activity
+            android:name=".AssuranceActivity"
+            android:label="Connect to Assurance"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.CustomSettings">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".AssuranceActivity" />
+        </activity>
     </application>
 
 </manifest>
