--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -207,6 +207,7 @@ task platformFunctionalTestJacocoReport(type: JacocoReport, dependsOn: "createPh
 dependencies {
 
     // Adobe Mobile SDK Core
+//    implementation('com.adobe.marketing.mobile:core:1+')
     implementation 'com.github.adobe.aepsdk-core-android:core:v2.0.0-alpha.3'
 
     testImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
