--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -213,6 +213,7 @@ dependencies {
 
     testImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
     testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoCoreVersion}"
+    testImplementation 'org.mockito:mockito-inline:4.5.1'
     testImplementation 'org.powermock:powermock-api-mockito2:2.0.0'
     testImplementation 'org.powermock:powermock-module-junit4:2.0.0'
 
