Add AndroidX annotations for nonnull

--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -209,6 +209,7 @@ dependencies {
     // Adobe Mobile SDK Core
     // implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
     implementation 'com.github.adobe.aepsdk-core-android:core:dev-v2.0.0-SNAPSHOT'
+    implementation 'androidx.annotation:annotation:1.5.0'
 
     testImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
     testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoCoreVersion}"
