--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -213,7 +213,7 @@ dependencies {
 
     testImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
     testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoCoreVersion}"
-    testImplementation 'org.mockito:mockito-inline:4.5.1'
+    testImplementation "org.mockito:mockito-inline:${rootProject.ext.mockitoCoreVersion}"
 
     // Adobe Mobile dependencies for testing
     implementation('com.adobe.marketing.mobile:edge:1+'){
