--- a/code/build.gradle
+++ b/code/build.gradle
@@ -8,19 +8,19 @@ plugins {
 }
 
 ext {
-    // android config
+    // Android config
     minSdkVersion = 19
     targetSdkVersion = 33
     compileSdkVersion = 33
     versionCode = 1
 
-    // java config
+    // Java config
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 
-    // dependencies
+    // Dependencies
     junitVersion = "1.1.3"
-    mockitoCoreVersion = "4.5.1"
+    mockitoVersion = "4.5.1"
     testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     jacocoVersion = "0.8.8"
 }
