--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -53,12 +53,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation project(':edgebridge')
 
-    // implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
+//    implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
+    // TODO: replace this with the production dependency above when available
     implementation 'com.github.adobe.aepsdk-core-android:core:dev-v2.0.0-SNAPSHOT'
-    implementation('com.adobe.marketing.mobile:edge:1+'){
-        exclude group: 'com.adobe.marketing.mobile', module: 'core'
-    }
-    implementation('com.adobe.marketing.mobile:assurance:1+'){
-        exclude group: 'com.adobe.marketing.mobile', module: 'core'
-    }
+
+//    implementation('com.adobe.marketing.mobile:edge:1+'){
+//        exclude group: 'com.adobe.marketing.mobile', module: 'core'
+//    }
+    // TODO: replace these with the actual 2.0 Edge dependency when available
+    implementation fileTree(dir: 'libs', include: ['edge-release-2.0.0.aar', 'edgeidentity-release-2.0.0.aar'])
+
+    implementation 'com.github.adobe:aepsdk-assurance-android:v2.0.0-alpha.1'
+//    implementation('com.adobe.marketing.mobile:assurance:1+'){
+//        exclude group: 'com.adobe.marketing.mobile', module: 'core'
+//    }
 }
