--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -48,31 +48,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation project(':edgebridge')
+
     //    implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
     // TODO: replace this with the production dependency above when available
     implementation 'com.github.adobe.aepsdk-core-android:core:dev-v2.0.0-SNAPSHOT'
-    implementation ('com.github.adobe:aepsdk-assurance-android:v2.0.0-alpha.1') {
-        transitive = false
-    }
 //    implementation('com.adobe.marketing.mobile:assurance:1+'){
 //        exclude group: 'com.adobe.marketing.mobile', module: 'core'
 //    }
+    implementation ('com.github.adobe:aepsdk-assurance-android:v2.0.0-alpha.1') {
+        transitive = false
+    }
+//    implementation('com.adobe.marketing.mobile:edge:1+'){
+//        exclude group: 'com.adobe.marketing.mobile', module: 'core'
+//    }
+    // TODO: replace these with the actual 2.0 Edge dependency when available
+    implementation fileTree(dir: 'libs', include: ['edge-release-2.0.0.aar', 'edgeidentity-release-2.0.0.aar'])
+    implementation project(':edgebridge')
 
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-//    implementation('com.adobe.marketing.mobile:edge:1+'){
-//        exclude group: 'com.adobe.marketing.mobile', module: 'core'
-//    }
-    // TODO: replace these with the actual 2.0 Edge dependency when available
-    androidTestImplementation fileTree(dir: 'libs', include: ['edge-release-2.0.0.aar', 'edgeidentity-release-2.0.0.aar'])
-
-
-
-
-
-
-
 }
