Update docs link

--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -115,7 +115,7 @@ publishing {
             pom {
                 name = mavenRepoName
                 description = mavenRepoDescription
-                url = 'https://aep-sdks.gitbook.io'
+                url = 'https://developer.adobe.com/client-sdks'
                 licenses {
                     license {
                         name = 'Adobe Proprietary'
