--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -53,10 +53,11 @@ dependencies {
     implementation ('com.adobe.marketing.mobile:assurance:2.0.0-SNAPSHOT') {
         transitive = false
     }
-//    implementation('com.adobe.marketing.mobile:edge:1+'){
-//        exclude group: 'com.adobe.marketing.mobile', module: 'core'
-//    }
-    // TODO: replace these with the actual 2.0 Edge dependency when available
-    implementation fileTree(dir: 'libs', include: ['edge-release-2.0.0.aar', 'edgeidentity-release-2.0.0.aar'])
+    implementation ("com.adobe.marketing.mobile:edge:2.0.0-SNAPSHOT") {
+        transitive = false
+    }
+    implementation ("com.adobe.marketing.mobile:edgeidentity:2.0.0-SNAPSHOT") {
+        transitive = false
+    }
     implementation project(':edgebridge')
 }
