--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -43,21 +43,16 @@ android {
 }
 
 dependencies {
+    implementation project(':edgebridge')
+    implementation "com.adobe.marketing.mobile:core:2.+"
+    implementation 'com.adobe.marketing.mobile:assurance:2.+'
+    implementation ("com.adobe.marketing.mobile:edge:2.+") {
+        transitive = false
+    }
+    implementation "com.adobe.marketing.mobile:edgeidentity:2.+"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-
-    implementation "com.adobe.marketing.mobile:core:${rootProject.mavenCoreVersion}"
-    implementation ('com.adobe.marketing.mobile:assurance:2.0.0-SNAPSHOT') {
-        transitive = false
-    }
-    implementation ("com.adobe.marketing.mobile:edge:2.0.0-SNAPSHOT") {
-        transitive = false
-    }
-    implementation ("com.adobe.marketing.mobile:edgeidentity:2.0.0-SNAPSHOT") {
-        transitive = false
-    }
-    implementation project(':edgebridge')
 }
