--- a/code/edgebridge/build.gradle
+++ b/code/edgebridge/build.gradle
@@ -215,13 +215,10 @@ dependencies {
     testImplementation "org.mockito:mockito-inline:${rootProject.ext.mockitoVersion}"
 
     // Adobe Mobile dependencies for testing
-    // TODO: replace these with the actual 2.0 Edge dependency when available
-    androidTestImplementation ("com.adobe.marketing.mobile:edge:2.0.0-SNAPSHOT") {
+    androidTestImplementation ("com.adobe.marketing.mobile:edge:2.+") {
         transitive = false
     }
-    androidTestImplementation ("com.adobe.marketing.mobile:edgeidentity:2.0.0-SNAPSHOT") {
-        transitive = false
-    }
+    androidTestImplementation "com.adobe.marketing.mobile:edgeidentity:2.+"
 
     androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.junitVersion}"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
