--- a/code/gradle.properties
+++ b/code/gradle.properties
@@ -24,4 +24,4 @@ mavenRepoDescription=Adobe Experience Platform Edge Bridge extension for the Ado
 mavenUploadDryRunFlag=false
 
 # Mobile Core dependency version
-mavenCoreVersion=2.0.0-SNAPSHOT
+mavenCoreVersion=2.0.0
