--- a/Documentation/tutorials/EdgeBridgeTutorialAppFinal/build.gradle
+++ b/Documentation/tutorials/EdgeBridgeTutorialAppFinal/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
+    id 'com.diffplug.gradle.spotless' version '6.11.0' apply false
 }
 
 task clean(type: Delete) {
