Update tutorial app dependencies to 2.0.0 version

--- a/Documentation/tutorials/EdgeBridgeTutorialAppStart/app/build.gradle
+++ b/Documentation/tutorials/EdgeBridgeTutorialAppStart/app/build.gradle
@@ -58,30 +58,17 @@ dependencies {
     implementation 'com.adobe.marketing.mobile:assurance:2.0.0'
     implementation 'com.adobe.marketing.mobile:core:2.0.0'
     implementation 'com.adobe.marketing.mobile:lifecycle:2.0.0'
-    implementation('com.adobe.marketing.mobile:edge:2.0.0-SNAPSHOT') {
-        transitive = false
-    }
-//    implementation 'com.adobe.marketing.mobile:edgeconsent:2.0.0'
-    implementation('com.adobe.marketing.mobile:edgeconsent:2.0.0-SNAPSHOT') {
-        transitive = false
-    }
-//    implementation 'com.adobe.marketing.mobile:edgeidentity:2.0.0'
-    implementation('com.adobe.marketing.mobile:edgeidentity:2.0.0-SNAPSHOT') {
-        transitive = false
-    }
+    implementation 'com.adobe.marketing.mobile:edge:2.0.0'
+    implementation 'com.adobe.marketing.mobile:edgeconsent:2.0.0'
+    implementation 'com.adobe.marketing.mobile:edgeidentity:2.0.0'
 
 
-    //* Edge Bridge Tutorial - code section (1/2)
-    implementation 'com.adobe.marketing.mobile:edgebridge:2.0.0-SNAPSHOT'
+    /* Edge Bridge Tutorial - code section (1/2)
+    implementation 'com.adobe.marketing.mobile:edgebridge:2.0.0'
     // Edge Bridge Tutorial - code section (1/2) */
 
     //* Edge Bridge Tutorial - remove section (2/2)
-    implementation('com.adobe.marketing.mobile:analytics:2.0.0-SNAPSHOT') {
-        transitive = false
-    }
-//    implementation 'com.adobe.marketing.mobile:identity:2.0.0-SNAPSHOT'
-    implementation('com.adobe.marketing.mobile:identity:2.0.0-SNAPSHOT') {
-        transitive = false
-    }
+    implementation 'com.adobe.marketing.mobile:analytics:2.0.0'
+    implementation 'com.adobe.marketing.mobile:identity:2.0.0'
     // Edge Bridge Tutorial - remove section (2/2) */
 }
