--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -44,12 +44,10 @@ android {
 
 dependencies {
     implementation project(':edgebridge')
-    implementation "com.adobe.marketing.mobile:core:2.+"
+    implementation 'com.adobe.marketing.mobile:core:2.+'
     implementation 'com.adobe.marketing.mobile:assurance:2.+'
-    implementation ("com.adobe.marketing.mobile:edge:2.+") {
-        transitive = false
-    }
-    implementation "com.adobe.marketing.mobile:edgeidentity:2.+"
+    implementation 'com.adobe.marketing.mobile:edge:2.+'
+    implementation 'com.adobe.marketing.mobile:edgeidentity:2.+'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
