--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ workflows:
 jobs:
   validate-code:
     docker:
-      - image: cimg/android:2024.01
+      - image: cimg/android:2024.01-node
     steps:
       - checkout
 
